# tokenizator-plus

./: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml
.github/workflows/: rust_ci.yml
src/: ast_summary.rs  file_tree.rs  logger.rs  main.rs
src/templates/: index.html
static/: app.js  style.css
