[package]
name = "tokenizator-plus"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.5"
tera = "1.19.1"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
glob = "0.3.1"
tiktoken-rs = "0.7.0"
tokio-stream = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
bytes = "1"
futures-util = "0.3"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"
